--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
   app_vet:
     container_name: app_vet
@@ -7,29 +6,32 @@ services:
     ports:
       - "8080:8080"
     environment:
-      DB_URL: jdbc:postgresql://clinica_vet:5432/clinica_veterinaria?createDatabaseIfNotExist=true&serverTimezone=UTC
-      DB_USER_NAME: 
-      DB_PASSWORD: 
+      DB_URL: ${DB_URL}
+      DB_USER_NAME: ${DB_USER_NAME}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_PLATFORM: org.hibernate.dialect.PostgreSQLDialect
     restart: always
     depends_on:
       clinica_vet:
-          condition: service_healthy
+        condition: service_healthy
+
   clinica_vet:
     container_name: clinica_vet
     image: postgres:12
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_USER: 
-      POSTGRES_PASSWORD: 
+      POSTGRES_USER: ${DB_USER_NAME}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: clinica_veterinaria
     volumes:
       - pgdata:/var/lib/postgresql/data
     restart: always
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres -d clinica_veterinaria"]
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER_NAME} -d clinica_veterinaria"]
       interval: 10s
       timeout: 5s
       retries: 5
+
 volumes:
   pgdata:
