--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - pgdata:/var/lib/postgresql/data
     restart: always
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER_NAME} -d clinica_veterinaria"]
+      test: ["CMD-SHELL", "pg_isready -U postgres -d clinica_veterinaria"]
       interval: 10s
       timeout: 5s
       retries: 5
