--- a/demo.Clinica_Veterinaria/Dockerfile
+++ b/demo.Clinica_Veterinaria/Dockerfile
@@ -1,5 +1,10 @@
-FROM eclipse-temurin:21-jdk
-ARG JAR_FILE=target/demo.Clinica_Veterinaria-0.0.1.jar
-COPY ${JAR_FILE} app_veterinaria.jar
+FROM eclipse-temurin:21-jdk AS build
+WORKDIR /app
+COPY . .
+RUN ./mvnw package -DskipTests
+
+FROM eclipse-temurin:21-jre
+WORKDIR /app
+COPY --from=build /app/target/demo.Clinica_Veterinaria-*.jar app_veterinaria.jar
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "app_veterinaria.jar"]
